# qrgenerator

./: .env.example  .pip.conf  LICENSE  README.md  RENDER_DEPLOYMENT.md  app.py  requirements-alt.txt  requirements.txt  setup.cfg
templates/: base.html  gallery.html  index.html  result.html
