[metadata]
name = qr-generator
version = 1.0.0
description = QR Code Generator Flask Application

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.11
install_requires =
    Flask>=3.0.0
    qrcode[pil]>=7.4.0
    Pillow>=10.0.0
    Werkzeug>=3.0.0
    gunicorn>=23.0.0

[bdist_wheel]
universal = 0
